kube/minecraft-vanilla.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mc-vanilla
spec:
  defaultBackend:
    service:
      name: vanilla
      port:
        number: 25565
  ingressClassName: tailscale
---
apiVersion: v1
kind: Service
metadata:
  name: vanilla
  labels:
    app.kubernetes.io/name: minecraft
spec:
  type: ClusterIP
  ports:
  - port: 25565
    name: main
  - port: 25575
    name: rcon
    protocol: UDP
  selector:
    app.kubernetes.io/name: minecraft
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vanilla
  labels:
    app.kubernetes.io/name: minecraft
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: minecraft
  template:
    metadata:
      labels:
        app.kubernetes.io/name: minecraft
    spec:
      containers:
      - image: ghcr.io/xe/made-cap:latest
        imagePullPolicy: Always
        name: vanilla
        securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
        ports:
        - containerPort: 25565
          name: main
        - containerPort: 25575
          name: rcon
          protocol: UDP
        readinessProbe:
          exec:
            command: [ "/usr/local/bin/mc-monitor", "status", "--host", "localhost" ]
          # Give it i + p * f seconds to be ready, so 120 seconds
          initialDelaySeconds: 20
          periodSeconds: 5
          failureThreshold: 20
        # Monitor ongoing liveness
        livenessProbe:
          exec:
            command: ["/usr/local/bin/mc-monitor", "status", "--host", "localhost"]
          initialDelaySeconds: 120
          periodSeconds: 60
        volumeMounts:
        - name: mc-data
          mountPath: /data
      volumes:
      - name: mc-data
        persistentVolumeClaim:
          claimName: vanilla
